<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/register_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="15"
            android:hint="@string/register_name"
            android:inputType="text"
            android:backgroundTint="@color/colorAccent"/>

        <EditText
            android:id="@+id/lname_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/name_et"
            android:ems="15"
            android:hint="@string/register_lname"
            android:backgroundTint="@color/colorAccent"/>

        <EditText
            android:id="@+id/mail_et_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lname_et"
            android:ems="15"
            android:hint="@string/mail_hint"
            android:backgroundTint="@color/colorAccent"
            />

        <EditText
            android:id="@+id/password_et_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mail_et_register"
            android:ems="15"
            android:hint="@string/password_hint"
            android:backgroundTint="@color/colorAccent"/>

        <EditText
            android:id="@+id/conf_password_et_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password_et_register"
            android:ems="15"
            android:hint="@string/confirm_password_hint"
            android:backgroundTint="@color/colorAccent"/>

        <CheckBox
            android:id="@+id/checkbox_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/conf_password_et_register"
            android:layout_alignStart="@id/conf_password_et_register"
            android:text="@string/supplier_text"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16dp"/>

        <CheckBox
            android:id="@+id/checkbox_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_supplier"
            android:layout_alignStart="@+id/checkbox_supplier"
            android:text="@string/user_text"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/conf_password_et_register"
            android:layout_marginTop="100dp"
            android:text="@string/fields_required"
            android:textColor="#e83030"
            android:textSize="16dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/error_tv"
            android:layout_marginTop="24dp"
            android:text="@string/register_btn_text"
            android:background="@drawable/button_style"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/have_account_log_in"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        />

</RelativeLayout>