<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="8dp"
        android:clipToPadding="false">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="15"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif-condensed"
            android:backgroundTint="@color/colorAccent"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/email_et"
            android:ems="15"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-condensed"
            android:backgroundTint="@color/colorAccent"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="128dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_text"
            android:background="@drawable/button_style"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register_text"/>

</RelativeLayout>
